# deep_learning

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
CNN/basic/: fashion_mnist.ipynb  mnist.ipynb
finance/: loan_approval.ipynb  loan_approval_tuned.ipynb
medical/heart_disease/: best_model.pt  heart_disease_UCI.ipynb  heart_disease_UCI_tuned.ipynb  project2.ipynb
